# cape_ml_search

./: .gitignore  README.md  __init__.py  pyproject.toml
data/final/: ml_keyphrases.csv
data/processed/: model1_100similar_phrases.csv  model1_200similar_phrases.csv  plans_missing_url.csv
data/raw/: keyphrases_cosine_sim.csv  plans.xlsx
data/raw/text/: aberdeen-city-council-ba2422d.txt  aberdeen-city-council.txt  adur-district-council-1c10678.txt  amber-valley-borough-council-35fda7c.txt  babergh-district-council-abfcb72.txt  basingstoke-and-deane-borough-council-f11493f.txt  bedford-borough-council-2d588ed.txt  blaby-district-council-c2fdd72.txt  bolsover-district-council-00f5142.txt  borough-of-broxbourne-60d55b6.txt  bournemouth-christchurch-and-poole-borough-council-64801a7.txt  braintree-district-council-8ee7997.txt  buckinghamshire-council-e2f883a.txt  caerphilly-county-borough-council-33c02eb.txt  caerphilly-county-borough-council-3faada6.txt  cambridge-city-council-98f08f0.txt  (+94 more)
notebooks/: clustering-keyphrases.ipynb  final-csv.ipynb  first-model.ipynb  html-processing.ipynb  keyBERT.ipynb  my_soc_dataset-test.ipynb  requirements.txt  second-model.ipynb  testing-data.ipynb  topic-modelling.ipynb  utils.py  vectorise-cluster.ipynb
notebooks/.ipynb_checkpoints/: second-model-checkpoint.ipynb  spacy-cleaning-checkpoint.ipynb  topic-modelling-checkpoint.ipynb  vecotorise-cluster-checkpoint.ipynb  week-2-checkpoint.ipynb
semantic_search/: main.py  model_keyphrases.py  process_keyphrases.py  process_plans.py  requirements.txt  utils.py
tests/: __init__.py
