[tool.poetry]
name = "ML-project"
version = "0.1.0"
description = ""
authors = ["Louis Davidson"]

[tool.poetry.dependencies]
python = "^3.8"
mysoc_dataset = "^0.3.0"
spacy = "^3.5.1"
nltk = "^3.7"
transformers = "^4.26.1"
sentence-transformers = "^2.2.2"
pytextrank = "^3.2.4"
tqdm = "^4.64.1"
textblob = "^0.17.1"
keybert = "*"
keyphrase-vectorizers = "*"
seaborn = "^0.12.1"
umap-learn = "^0.5.3"
hdbscan = "^0.8.29"
plotly = "^5.9.0"
bertopic = "^0.14.1"
pyspellchecker = "^0.7.1"
torch = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"